Fix submit button right alignment

--- a/amor.css
+++ b/amor.css
@@ -20,8 +20,12 @@ img {
 }
 
 /* Standardize the size of inputs */
-form[name="customer_information"] input:not([type="submit"]), select, form[name="customer_information"] > table:nth-of-type(4) {
+form[name="customer_information"] input:not([type="submit"]), select {
   width: 80%;
+}
+
+form[name="customer_information"] > table:nth-of-type(4) {
+  max-width: 320px;
 }
 
 /* Bump up font size for legibility */
